# macOS-setup

./: .gitignore  .pre-commit-config.yaml  .profile  404.html  Ocean_Esh.terminal  README.md  bash_profile  bashrc  index.html  inputrc  mkdocs.yml  profile  pyproject.toml  requirements.txt  sitemap.xml  versions.json  vscode_settings.json
.github/: CODEOWNERS  release-drafter-config.yml
.github/workflows/: build.yaml  docs.yaml  release-drafter.yaml
.ssh/: config
.sshfs/: imperial_unmount.sh  lxplus_mount.sh  soolin_mount.sh  soolin_proxy_mount.sh  soolin_proxy_unmount.sh  soolin_unmount.sh
3.0/: sitemap.xml
3.0/getting_started/getting-started/: index.html
3.0/programs/cli/: index.html
3.0/programs/homebrew/: index.html
3.0/programs/latex/: index.html
3.0/programs/programs/: index.html
3.0/search/: search_index.json
3.1/: sitemap.xml
3.1/search/: search_index.json
3.2/: index.html  sitemap.xml
3.2/search/: search_index.json
3.2/see-also/: index.html
docs/: see-also.md
docs/getting_started/: getting-started.md
docs/mac_utilities/: mac-utilities.md
docs/programs/: cli.md  homebrew.md  ides.md  latex.md  programs.md  python.md
getting_started/getting-started/: index.html
mac_utilities/mac-utilities/: index.html
programs/cli/: index.html
programs/homebrew/: index.html
programs/ides/: index.html
programs/latex/: index.html
programs/programs/: index.html
programs/python/: index.html
search/: search_index.json
see-also/: index.html
ssh/: config
sshfs/: imperial_mount.sh  lxplus_unmount.sh
v3.0.0/: 404.html
(+15 files in other folders)
